修复章节工作台与记忆检索并引入图谱功能开关

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -60,3 +60,7 @@ LOG_LEVEL=INFO
 ENABLE_HTTP_LOGGING=true
 # Optional file path for backend logs
 LOG_FILE=../data/logs/app.log
+
+# Feature Flags
+# Set false to temporarily disable knowledge graph extraction and APIs.
+GRAPH_FEATURE_ENABLED=true
