feat: 强化章节生成链路并打通番茄创建/发布闭环
1. automation/fanqie-playwright/README.md：补充 detect-book-id 与 bookId 持久化说明，新增创建后自动绑定与状态文件说明。

2. automation/fanqie-playwright/config/example.json：扩展 book/tags/主角/读者字段，新增持久化路径与标签选择器，补充 fillKeepOpen 配置。

3. automation/fanqie-playwright/config/local.fill-debug.json：新增本地调试配置模板，用于创建页字段回填与章节发布调试。

4. automation/fanqie-playwright/package.json：新增 fill-create-book-form、detect-book-id 两个脚本入口。

5. automation/fanqie-playwright/src/publishChapterFlow.js：新增番茄发布前正文清洗（去除策划括注噪音），并统一 markdown/file/content 三种输入路径的清洗逻辑。

6. automation/fanqie-playwright/src/run.js：新增跨 frame 选择器查找、标签弹窗选择、bookId 检测与持久化、创建页仅回填模式、detect-book-id 模式增强与命令分发扩展。

7. backend/core/chapter_craft.py：新增章节标题与章节蓝图规范化模块，包含长度边界、微弧节奏、阶段提示、标题去污染与去重规则。

8. backend/agents/studio.py：接入 chapter_craft 工具；强化导演/裁决提示词；清洗章节标题头与空行；兜底文案去掉章节标题前缀；长度约束改为统一边界模型。

9. backend/agents/studio.py：修复 studio 流式输出泄露中间 JSON 的问题，改为导演阶段内部执行、仅流式输出裁决后的最终正文。

10. backend/api/main.py：新增导出/发布正文清洗函数（清理策划括注噪音）；重构章节蓝图 fallback 与 normalize；增强 one-shot 约束（节奏、长度、标题禁令）。

11. backend/api/main.py：新增章节目标字数推断与草稿长度再平衡逻辑，支持短文补写与超长压缩，统一草稿长度边界策略。

12. backend/api/main.py：新增番茄创建接口、参数建议接口、bookId 自动检测/回填/绑定流程；项目查询响应增加 fanqie_book_id；发布接口优先复用绑定 bookId 并记录来源。

13. backend/models/__init__.py：Project 模型新增 fanqie_book_id 字段。

14. backend/tests/test_api_smoke.py：补充标题规范化、fallback 标题禁用词、导出清洗、章节标题剥离与长度策略等回归测试。

15. frontend/src/services/exportService.ts：新增导出前正文清洗；章节导出与整书导出统一使用清洗后的正文。

16. frontend/src/services/__tests__/exportService.test.ts 与 exportService.pbt.test.ts：更新断言以覆盖清洗行为，并新增策划括注清理与正常括号保留测试。

17. frontend/src/pages/ChapterWorkbenchPage.tsx、对应测试、useProjectStore.ts：新增番茄参数面板/LLM 回填/创建并绑定流程；阅读模式仅清理思考噪音不误删正文方括号；补充清空创作台与草稿恢复判定逻辑，并同步 fanqie_book_id 前端字段。

--- a/automation/fanqie-playwright/package.json
+++ b/automation/fanqie-playwright/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "run": "node src/run.js",
     "create-book": "node src/run.js create-book",
+    "fill-create-book-form": "node src/run.js fill-create-book-form",
     "publish-chapter": "node src/run.js publish-chapter",
+    "detect-book-id": "node src/run.js detect-book-id",
     "record": "node src/run.js record",
     "inspect": "node src/run.js inspect"
   },
