--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "fast-check": "^4.5.3",
     "jsdom": "^28.1.0",
     "postcss": "^8.4.32",
